fixed bugs, stabilize public tests and add client report access
